[package]
name = "burn_the_candle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
burn = { version = "0.11.0", features = ["candle"] }
burn-candle = { git = "https://github.com/tracel-ai/burn", version = "0.11.0" }
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.3.1", features = ["cuda"] }
